@@ -133,133 +133,14 @@ function ngg_list_contributors()	{
 function ngg_list_support()	{
 /* The list of my supporters. Thanks to all of them !*/
 	
-	$supporter = array(
-	'Mike DAmbrose' => 'http://www.videovisions.com/',
-	'Ideablogger' => 'http://www.ablogofideas.net/',
-	'Chuck Coury' => '',
-	'Kelter' => 'http://www.badcat.com',
-	'Martin Bahr' => 'http://www.law-vodcast.de/',
-	'Marcel Kneuer' => '',
-	'Alakhnor' => 'http://www.alakhnor.info',
-	'Rod' => 'http://www.le-hiboo.com',
-	'Ttancm' => 'http://www.ttancm.com/',
-	'Francoise Pescatore' => ''	,
-	'Andreas (die-andis)' => 'http://www.rummel-platz.de/',
-	'Andreas' => 'http://blog.friedlandreas.de/',
-	'Joern Kretzschmar' => 'http://diekretzschmars.de/',
-	'Mike' => 'http://www.mikemuscroft.com/',
-	'Sabine (Haselina)' => 'http://www.haselina.de/',
-	'Milemann' => '',
-	'Kees de Bruin' => 'http://www.kdbruin.net/fotoalbum/',
-	'Helene D.' => 'http://supernatural.hellioness.com/imagegallery/',
-	'Ghettomaster' => 'http://www.ghettoworld.de/',
-	'Joe Pharis' => 'http://www.southernstylecruisers.com/',
-	'Charlie (Jump Media)' => '',
-	'Simon Paarlberg' => 'http://www.paarlberg.dk/',
-	'Clive Loseby' => 'http://www.access-bydesign.com/',
-	'Tonny Kluften' => 'http://www.tinnitus-behandling.info/',
-	'Andreas Oeye' => 'http://www.andreasoye.com/',
-	'Laurent Momy' => '',
-	'Patrick Hennessey' => 'http://www.digitalvagabonding.com/',
-	'Hans Kiesouw' => 'http://www.digitalvagabonding.com/',
-	'Thomas Bradley' => 'http://www.tobeon.co.uk/wordpress/',
-	'Frederic Deghetto' => '',
-	'Christopher Weddell' => '',
-	'Martin Scholz' => '',
-	'Non Eric' => 'http://www.lunatec.de/',
-	'Ronen Hirsch' => 'http://www.stillcreation.com/',
-	'Michael Erhart' => '',
-	'Luc Saint-Elie' => 'http://luc.saint-elie.com/',
-	'Matthew Barker' => '',
-	'Emanuel Kluge' => '',
-	'Alba Bentos Pereira' => '',
-	'Bill Babcock' => 'http://www.bnj.com',
-	'Jesper Haug Karsrud' => 'http://www.beyond-sanity.com',
-	'Marco van de Ven' => 'http://www.mvdven.nl',
-	'Peter Krabshuis' => 'http://www.dragoneye.nl',
-	'Teresa Lo' => 'http://www.invivoanalytics.com',
-	'Jes Carlskov' => '',
-	'John Statler' => 'http://www.systemsolver.com',
-	'Joshua Katinger' => 'http://www.accessionmedia.com',
-	'iSight Technologies' => 'http://www.isighttech.com',
-	'Kay Germer' => 'http://highkay.de/',
-	'Ramon Cutanda Lopez' => '',
-	'Luc Dubois' => 'http://www.oriste.com/',
-	'Dixie Reid' => 'http://www.thereids.co.nz/',
-	'Gareth Bridger' => '',
-	'McGillveray Studios' => 'http://www.mcgillveraystudios.ca/',
-	'Paul Rogers' => 'http://www.swarfworks.com',
-	'Steve Lieber' => 'http://www.stevelieber.com',
-	'Modo Web Design' => 'http://www.modowebdesign.com',
-	'Matthew Feldman' => '',
-	'Gideon Kiers' => 'http://www.gideonkiers.com',
-	'Susan Bates' => 'http://www.fineartsmith.com',
-	'ILISA International USA' => 'http://www.ilisa.com',
-	'Mark Campbell' => 'http://www.layersofcolor.com',
-	'Aaron Snyder' => 'http://www.aaronsnyder.net',
-	'Patrick Pirker' => '',
-	'Christoph Wander' => '',
-	'Monterey Bay Singles LLC' => '',
-	'Elvina Flower' => '',
-	'Colossal Pups' => '',
-	'Florian Seuret' => '',
-	'Petri Teittinen' => '',
-	'Deval Shah' => 'http://www.LuvPix.net',
-	'Simply Charlotte Mason, LLC'  => '',
-	'John Williams' => '',
-	'George Branchflower' => '',
-	'Douglas J Barnum' => '',
-	'Bradford Weir' => 'http://www.bweir.com',	
-	'Almost Anything Desktop Publishing' => 'http://www.almost-anything.com.au/',
-	'Aengus Moran' => '',
-	'Fias Co Farm' => 'http://www.fiascofarm.com',
-	'Overdrive Design Labs' => 'http://www.overdrivedesign.biz',
-	'Lincoln Hardwood and Tool Company, Inc.' => 'http://www.lhtcinc.com',
-	'Kurt Perschke' => 'http://www.redballproject.com',
-	'Christian Hoegl' => 'http://www.creativbox.at',	
-	'John Swartz' => 'http://www.jswartz.net',
-	'Michael Kubala' => '',	
-	'Kyle Meyers' => '',
-	'DF Design' => '',
-	'Olivia Loh' => '',
-	'Henner Guenter' => 'http://www.rvweser.de',
-	'Fadli Fadli' => '',
-	'Philippe Vanhoolandt' => 'http://www.ramdam.com',
-	'Gary Verhoff' => '',
-	'Detlev Danner' => 'http://www.mcdd.ch',
-	'Laa&szlig; / Brembs GbR' => 'http://www.camoart.com',
-	'Dean Cowan' => 'http://www.deanandlinda.com',
-	'Ross Calloway' => '',
-	'Scott Kyle' => '',		
-	'Allan Corfix Lykke' => '',
-	'Marieke van de Pol' => '',
-	'Tobias Kern' => 'http://www.tobikern.de',
-	'Sander van Loon' => '',
-	'Daniel Oliver Habenicht' => 'http://www.audioschmiede.de',
-	'Michael Sinclair' => '',
-	'Serira Designs' => 'http://www.seriradesigns.com', 
-	'Wang Qingsheng' => '',
-	'Maurice van der Linden' => 'http://www.vd-linden.nl',
-	'Sandra Longmore' => '',
-	'Grupo Probeta' => 'http://www.grupoprobeta.com',
-	'Aaron Simpson' => '',
-	'Dana Burns' => '',
-	'Craig Thompson' => 'http://www.globalwebhq.com/',
-	'Cynthia Spangler' => 'http://www.parkcityweb.com/',
-	'Guy Raif' => '',
-	'McGillveray Studios' => 'http://www.mcgillveraystudios.ca',
-	'Stewart Evans' => 'http://www.scbs.org/',
-	'Richard Hartmann' => '',
-	'Robert Wetzlmayr' => '',
-	'Lesly St Louis' => 'http://www.lesstlouis.com',
-	'Marko Toncic' => '',
-	'SlashGear.com' => 'http://www.slashgear.com',
-	'Mustang Rock inc' => '',
-	'Jim Nelson' => 'http://www.tripawds.com/',
-	'Tim Bowen' => 'http://www.creativeslice.com',
-	'Fabrizio Parodi' => ''
-	);
+	global $ngg;
 	
+	$supporter = nggAdminPanel::get_remote_array($ngg->donators);
+
+	// Ensure that this is a array
+	if ( !is_array($supporter) )
+		return _e('and all donators...', 'nggallery');
+
 	ksort($supporter);
 	$i = count($supporter);
 	foreach ($supporter as $name => $url)
